# scheduler

./: .gitignore  Dockerfile  README.md  codex.md  docker-compose.yml  pyproject.toml
.plans/: 00init_plan.md
.prompt/: 00init
examples/: scheduler.toml
examples/tasks/: sample_tasks.py
src/scheduler/: __main__.py  cli.py  config.py  db.py  decorators.py  runner.py  scanner.py  tui.py
tests/: test_cli.py  test_config.py  test_db.py  test_decorators.py  test_examples.py  test_runner.py  test_scanner.py  test_tui.py
