[project]
name = "scheduler"
version = "0.1.0"
description = "Cloud service that runs Python functions on a scheduler"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Scheduler" }
]
dependencies = [
  "rich>=13.7.0",
]

[project.scripts]
scheduler = "scheduler.cli:main"

[project.optional-dependencies]
 dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
